fixing spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -13,6 +13,7 @@ body {
   font-weight: 300;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 #container {
